bindings/rust/libgpiod-sys/src/lib.rs


extern "C" {
    /// Check if the line is currently in use.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// True if the line is in use, false otherwise.
    ///
    /// ## Note
    /// The user space can't know exactly why a line is busy. It may have been
    /// requested by another process or hogged by the kernel. It only matters that
    /// the line is used and we can't request it.
    pub fn gpiod_line_is_used(line: *mut gpiod_line) -> bool;
}

extern "C" {
    /// Read the GPIO line drive setting.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// Returns [`GPIOD_LINE_DRIVE_PUSH_PULL`], [`GPIOD_LINE_DRIVE_OPEN_DRAIN`] or
    /// [`GPIOD_LINE_DRIVE_OPEN_SOURCE`].
    pub fn gpiod_line_drive(line: *mut gpiod_line) -> c_int;
}

extern "C" {
    /// Get the handle to the GPIO chip controlling this line.
    ///
    /// ## Arguments
    /// * `line` The GPIO line object.
    ///
    /// ## Return
    /// Pointer to the GPIO chip handle controlling this line.
    pub fn gpiod_line_get_chip(line: *mut gpiod_line) -> *mut gpiod_chip;
}

/// Available types of requests.
#[allow(non_camel_case_types)]
pub enum gpiod_line_request_type {
    /// Request the line(s), but don't change current direction.
    GPIOD_LINE_REQUEST_DIRECTION_AS_IS = 1,
    /// Request the line(s) for reading the GPIO line state.
    GPIOD_LINE_REQUEST_DIRECTION_INPUT = 2,
    /// Request the line(s) for setting the GPIO line state.
    GPIOD_LINE_REQUEST_DIRECTION_OUTPUT = 3,
    /// Only watch falling edge events.
    GPIOD_LINE_REQUEST_EVENT_FALLING_EDGE = 4,
    /// Only watch rising edge events.
    GPIOD_LINE_REQUEST_EVENT_RISING_EDGE = 5,
    /// Monitor both types of events.
    GPIOD_LINE_REQUEST_EVENT_BOTH_EDGES = 6,
}

/// Miscellaneous GPIO request flags.
#[allow(non_camel_case_types)]
pub enum gpiod_line_request_flag {
    /// The line is an open-drain port.
    GPIOD_LINE_REQUEST_FLAG_OPEN_DRAIN = 1,
    /// The line is an open-source port.
    GPIOD_LINE_REQUEST_FLAG_OPEN_SOURCE = 2,
    /// The active state of the line is low (high is the default).
    GPIOD_LINE_REQUEST_FLAG_ACTIVE_LOW = 4,
    /// The line has neither either pull-up nor pull-down resistor.
    GPIOD_LINE_REQUEST_FLAG_BIAS_DISABLED = 8,
    /// The line has pull-down resistor enabled.
    GPIOD_LINE_REQUEST_FLAG_BIAS_PULL_DOWN = 16,
    /// The line has pull-up resistor enabled.
    GPIOD_LINE_REQUEST_FLAG_BIAS_PULL_UP = 32,
}

/// Structure holding configuration of a line request.
#[repr(C)]
#[derive(Copy, Clone, Eq, PartialEq, Hash, Debug)]
pub struct gpiod_line_request_config {
    /// Name of the consumer.
    pub consumer: *const c_char,
    /// Request type.
    pub request_type: c_int,
    /// Other configuration flags.
    pub flags: c_int,
}

extern "C" {
    /// Reserve a single line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `config` Request options.
    /// * `default_val` Initial line value - only relevant if we're setting
    /// the direction to output.
    ///
    /// ## Return
    /// `0` if the line was properly reserved. In case of an error this
    /// routine returns `-1` and sets the last error number.
    ///
    /// ## Note
    /// If this routine succeeds, the caller takes ownership of the GPIO line until
    /// it's released.
    pub fn gpiod_line_request(
        line: *mut gpiod_line,
        config: *const gpiod_line_request_config,
        default_val: c_int,
    ) -> c_int;
}

extern "C" {
    /// Reserve a single line, set the direction to input.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    ///
    /// ## Return
    /// `0` if the line was properly reserved, `-1` on failure.
    pub fn gpiod_line_request_input(
        line: *mut gpiod_line,
        consumer: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Reserve a single line, set the direction to output.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    /// * `default_val` Initial line value.
    ///
    /// ## Return
    /// `0` if the line was properly reserved, `-1` on failure.
    pub fn gpiod_line_request_output(
        line: *mut gpiod_line,
        consumer: *const c_char,
        default_val: c_int,
    ) -> c_int;
}

extern "C" {
    /// Request rising edge event notifications on a single line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_rising_edge_events(
        line: *mut gpiod_line,
        consumer: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Request falling edge event notifications on a single line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_falling_edge_events(
        line: *mut gpiod_line,
        consumer: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Request all event type notifications on a single line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_both_edges_events(
        line: *mut gpiod_line,
        consumer: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Reserve a single line, set the direction to input.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    ///
    /// ## Return
    /// `0` if the line was properly reserved, `-1` on failure.
    pub fn gpiod_line_request_input_flags(
        line: *mut gpiod_line,
        consumer: *const c_char,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Reserve a single line, set the direction to output.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    /// * `default_val` Initial line value.
    ///
    /// ## Return
    /// `0` if the line was properly reserved, `-1` on failure.
    pub fn gpiod_line_request_output_flags(
        line: *mut gpiod_line,
        consumer: *const c_char,
        flags: c_int,
        default_val: c_int,
    ) -> c_int;
}

extern "C" {
    /// Request rising edge event notifications on a single line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_rising_edge_events_flags(
        line: *mut gpiod_line,
        consumer: *const c_char,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Request falling edge event notifications on a single line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_falling_edge_events_flags(
        line: *mut gpiod_line,
        consumer: *const c_char,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Request all event type notifications on a single line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_both_edges_events_flags(
        line: *mut gpiod_line,
        consumer: *const c_char,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Reserve a set of GPIO lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to reserve.
    /// * `config` Request options.
    /// * `default_vals` Initial line values - only relevant if we're setting
    /// the direction to output.
    ///
    /// ## Return
    /// `0` if all lines were properly requested. In case of an error
    /// this routine returns `-1` and sets the last error number.
    ///
    /// ## Note
    /// If this routine succeeds, the caller takes ownership of the GPIO lines
    /// until they're released. All the requested lines must be provided by the
    /// same [`gpiod_chip`].
    pub fn gpiod_line_request_bulk(
        bulk: *mut gpiod_line_bulk,
        config: *const gpiod_line_request_config,
        default_vals: *const c_int,
    ) -> c_int;
}

extern "C" {
    /// Reserve a set of GPIO lines, set the direction to input.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to reserve.
    /// * `consumer` Name of the consumer.
    ///
    /// ## Return
    /// `0` if the lines were properly reserved, `-1` on failure.
    pub fn gpiod_line_request_bulk_input(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Reserve a set of GPIO lines, set the direction to output.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to reserve.
    /// * `consumer` Name of the consumer.
    /// * `default_vals` Initial line values.
    ///
    /// ## Return
    /// `0` if the lines were properly reserved, `-1` on failure.
    pub fn gpiod_line_request_bulk_output(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
        default_vals: *const c_int,
    ) -> c_int;
}

extern "C" {
    /// Request rising edge event notifications on a set of lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to request.
    /// * `consumer` Name of the consumer.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_bulk_rising_edge_events(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Request falling edge event notifications on a set of lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to request.
    /// * `consumer` Name of the consumer.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_bulk_falling_edge_events(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Request all event type notifications on a set of lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to request.
    /// * `consumer` Name of the consumer.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_bulk_both_edges_events(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Reserve a set of GPIO lines, set the direction to input.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to reserve.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    ///
    /// ## Return
    /// `0` if the lines were properly reserved, `-1` on failure.
    pub fn gpiod_line_request_bulk_input_flags(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
        flags: c_int,
    ) -> c_int;
}
